--- a/static/bower.json
+++ b/static/bower.json
@@ -25,6 +25,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "requirejs": "~2.1.16",
+    "requirejs-plugins": "~1.0.3"
   }
 }
